Templates were edited to make everything woring

--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,5 +1,7 @@
+{% extends 'store/main.html' %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/main.css'%}">
+{% block content %}
+
 <h3>Cart</h3>
 
-<img src="{% static 'images/6+cart.png' %}">
+{% endblock %}
