--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,3 +1,7 @@
+{% extends 'store/main.html' %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/main.css'%}">
-<h3>Store</h3>
+{% block content %}
+
+	<h3>Store</h3>
+
+{% endblock %}
