Cart page was designed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,22 @@
+body{
+    background: #fefefe;
+}
 .product{
     border: 1px solid #eee;
     background: #fff;
     padding: 10px;
-} 
+}
+.product h5{
+    margin-top: 7px;
+    font-weight: 400;
+    font-size: 18px;
+    margin-bottom: 17px;
+}
+.item_title h5{
+    font-weight: 400;
+    font-size: 13px;
+}
+
+.price{
+    font-weight: bold;
+}
