--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -3,21 +3,142 @@
 {% block content %}
 
 <div class="row mt-3">
-	<div class="col-lg-4">
+	<div class="col-lg-3">
 		<div class="box-element product">
 			<img src="https://picsum.photos/id/544/400/300" width="100%">
-
+			<h5>The title of the product</h5>
+			<div>
+				<a href="#" class="btn btn-success bordered">Add to cart</a>
+				<a href="#" class="btn btn-outline-warning bordered">View</a>
+				<span style="float: right; display: inline-block; color: red; font-size: 20px;">$30</span>
+			</div>
 		</div>
 	</div>
-	<div class="col-lg-4">
+	<div class="col-lg-3">
 		<div class="box-element product">
 			<img src="https://picsum.photos/id/654/400/300" width="100%">
-
+			<h5>The title of the product</h5>
+			<div>
+				<a href="#" class="btn btn-success bordered">Add to cart</a>
+				<a href="#" class="btn btn-outline-warning bordered">View</a>
+				<span style="float: right; display: inline-block; color: red; font-size: 20px;">$30</span>
+			</div>
 		</div>		
 	</div>
-	<div class="col-lg-4">
+	<div class="col-lg-3">
 		<div class="box-element product">
 			<img src="https://picsum.photos/id/543/400/300" width="100%">
+			<h5>The title of the product</h5>
+			<div>
+				<a href="#" class="btn btn-success bordered">Add to cart</a>
+				<a href="#" class="btn btn-outline-warning bordered">View</a>
+				<span style="float: right; display: inline-block; color: red; font-size: 20px;">$30</span>
+			</div>
+		</div>		
+	</div>	
+	<div class="col-lg-3">
+		<div class="box-element product">
+			<img src="https://picsum.photos/id/53/400/300" width="100%">
+			<h5>The title of the product</h5>
+			<div>
+				<a href="#" class="btn btn-success bordered">Add to cart</a>
+				<a href="#" class="btn btn-outline-warning bordered">View</a>
+				<span style="float: right; display: inline-block; color: red; font-size: 20px;">$30</span>
+			</div>
+		</div>		
+	</div>
+</div>
+
+<div class="row mt-3">
+	<div class="col-lg-3">
+		<div class="box-element product">
+			<img src="https://picsum.photos/id/382/400/300" width="100%">
+			<h5>The title of the product</h5>
+			<div>
+				<a href="#" class="btn btn-success bordered">Add to cart</a>
+				<a href="#" class="btn btn-outline-warning bordered">View</a>
+				<span style="float: right; display: inline-block; color: red; font-size: 20px;">$30</span>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-3">
+		<div class="box-element product">
+			<img src="https://picsum.photos/id/123/400/300" width="100%">
+			<h5>The title of the product</h5>
+			<div>
+				<a href="#" class="btn btn-success bordered">Add to cart</a>
+				<a href="#" class="btn btn-outline-warning bordered">View</a>
+				<span style="float: right; display: inline-block; color: red; font-size: 20px;">$30</span>
+			</div>
+		</div>		
+	</div>
+	<div class="col-lg-3">
+		<div class="box-element product">
+			<img src="https://picsum.photos/id/323/400/300" width="100%">
+			<h5>The title of the product</h5>
+			<div>
+				<a href="#" class="btn btn-success bordered">Add to cart</a>
+				<a href="#" class="btn btn-outline-warning bordered">View</a>
+				<span style="float: right; display: inline-block; color: red; font-size: 20px;">$30</span>
+			</div>
+		</div>		
+	</div>	
+	<div class="col-lg-3">
+		<div class="box-element product">
+			<img src="https://picsum.photos/id/573/400/300" width="100%">
+			<h5>The title of the product</h5>
+			<div>
+				<a href="#" class="btn btn-success bordered">Add to cart</a>
+				<a href="#" class="btn btn-outline-warning bordered">View</a>
+				<span style="float: right; display: inline-block; color: red; font-size: 20px;">$30</span>
+			</div>
+		</div>		
+	</div>
+</div>
+
+<div class="row mt-3">
+	<div class="col-lg-3">
+		<div class="box-element product">
+			<img src="https://picsum.photos/id/124/400/300" width="100%">
+			<h5>The title of the product</h5>
+			<div>
+				<a href="#" class="btn btn-success bordered">Add to cart</a>
+				<a href="#" class="btn btn-outline-warning bordered">View</a>
+				<span style="float: right; display: inline-block; color: red; font-size: 20px;">$30</span>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-3">
+		<div class="box-element product">
+			<img src="https://picsum.photos/id/127/400/300" width="100%">
+			<h5>The title of the product</h5>
+			<div>
+				<a href="#" class="btn btn-success bordered">Add to cart</a>
+				<a href="#" class="btn btn-outline-warning bordered">View</a>
+				<span style="float: right; display: inline-block; color: red; font-size: 20px;">$30</span>
+			</div>
+		</div>		
+	</div>
+	<div class="col-lg-3">
+		<div class="box-element product">
+			<img src="https://picsum.photos/id/329/400/300" width="100%">
+			<h5>The title of the product</h5>
+			<div>
+				<a href="#" class="btn btn-success bordered">Add to cart</a>
+				<a href="#" class="btn btn-outline-warning bordered">View</a>
+				<span style="float: right; display: inline-block; color: red; font-size: 20px;">$30</span>
+			</div>
+		</div>		
+	</div>	
+	<div class="col-lg-3">
+		<div class="box-element product">
+			<img src="https://picsum.photos/id/571/400/300" width="100%">
+			<h5>The title of the product</h5>
+			<div>
+				<a href="#" class="btn btn-success bordered">Add to cart</a>
+				<a href="#" class="btn btn-outline-warning bordered">View</a>
+				<span style="float: right; display: inline-block; color: red; font-size: 20px;">$30</span>
+			</div>
 		</div>		
 	</div>
 </div>
