--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -2,6 +2,61 @@
 {% load static %}
 {% block content %}
 
-<h3>Cart</h3>
+<div class="row mt-3 p-2 border">
+	<div class="tf_p_details pb-3 mt-2">
+		<a href="#" class="btn btn-outline-warning">Continue Shopping</a>
+	</div>
+	<div>
+		<div class="row border p-2 row border border-top-0 p-2 align-items-baseline" style="background:#e6ffb5;">
+			<div class="col-1">&nbsp;</div>
+			<div class="col-1">d</div>
+			<div class="col-7">Item</div>
+			<div class="col-1">Quantity </div>
+			<div class="col-1">Price</div>
+			<div class="col-1">Total</div>
+		</div>		
+		<div class="product_data">
+			<div class="row border border-top-0 p-2 align-items-baseline" style="background:#fff;">
+				<div class="col-1 text-center">
+					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+					  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+					  <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+					</svg>
+				</div>
+				<div class="col-1 rounded">
+					<img src="https://picsum.photos/id/654/400/300" width="100%" class="rounded border p-1">					
+				</div>
+				<div class="col-7 item_title">
+					<h5>Convey meaning through background-color and add decoration with gradients</h5>
+				</div>
+				<div class="col-1">
+					<input type="number" name="" class="form-control input-group" value="3">
+				</div>
+				<div class="col-1 price">
+					<span class="currency_symble">$</span><span class="ts_p59"> 504</span>
+				</div>
+
+				<div class="col-1">Total</div>
+			</div>			
+			<div class="row border border-top-0 p-2 row border border-top-0 p-2 align-items-baseline" style="background:#f3f3f3;">
+				<div class="col-1 text-center ">
+					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+					  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+					  <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+					</svg>					
+				</div>
+				<div class="col-1">d</div>
+				<div class="col-7">Item</div>
+				<div class="col-1">
+					<input type="number" name="" class="form-control input-group" value="22">
+				</div>
+				<div class="col-1 price">
+					<span class="currency_symble">$</span><span class="ts_p59"> 504</span>
+				</div>
+				<div class="col-1">Total</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 {% endblock %}
