--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css'%}">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body class="" style="background: #fefefe;">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">TS Ecom</a>
@@ -24,20 +24,12 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Store</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+        <li class="nav-item">
+          <a href="/checkout" class="nav-link">Checkout</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
+          <a href="/cart" class="nav-link">Cart</a>
+        </li>        
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
