The file structure with pretty completed Templates

--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -7,7 +7,7 @@
 		<a href="#" class="btn btn-outline-warning">Continue Shopping</a>
 	</div>
 	<div>
-		<div class="row border p-2 row border border-top-0 p-2 align-items-baseline" style="background:#e6ffb5;">
+		<div class="row p-2 row p-2 align-items-baseline bg-primary text-white" style="">
 			<div class="col-1">&nbsp;</div>
 			<div class="col-1">d</div>
 			<div class="col-7">Item</div>
